# hands_on_ml

./: .gitignore  pyproject.toml  requirements.txt
data/sample/: gdp_life_satisfaction.csv
src/ch01/: linear_regression_life_satisfaction.py
src/ch02/: linear_regression_housing_prices.py
src/ch03/: classification_mnist.py
src/homl/: __init__.py  viz.py
src/utils/: __init__.py  transformers.py  viz.py
